--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,7 +22,9 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Build
-        run: npm run build
+        run: |
+          cd bingo
+          npm run build
       - name: setup-qemu
         uses: docker/setup-qemu-action@v2
       - name: setup-docker-buildx
