--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,7 +14,7 @@ jobs:
       - name: Test
         run: go test -v ./...
       - name: Build
-        run: go build -v -o accessbot main.go
+        run: go build -v -o bin-go main.go
       - name: setup-node
         uses: actions/setup-node@v3
         with:
