--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,7 +1,8 @@
 name: Deploy
 on:
-  release:
-    types: [published]
+  push:
+    branches:
+      - "*"
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
@@ -21,10 +22,28 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: inclunet/inclugames
+      - name: Get short commit hash
+        id: vars
+        run: echo "COMMIT_HASH=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
           context: "."
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: |
+            inclunet/inclugames:${{ github.ref_name == 'main' && 'latest' || 'beta' }}
+            inclunet/inclugames:${{ env.COMMIT_HASH }}
           labels: ${{ steps.meta.outputs.labels }}
+      - name: Login no Google Cloud
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCLOUD_SERVICE_KEY }}
+      - name: Project Setup no GCloud
+        run: gcloud config set project protean-aria-398100
+      - name: Cloud Run Deploy
+        run: |
+          gcloud run deploy inclugames \
+            --image=docker.io/inclunet/inclugames:latest \
+            --region=us-central1 \
+            --platform=managed \
+            --allow-unauthenticated
