--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -8,6 +8,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.21'
+      - name: Test
+        run: go test -v ./...
       - name: setup-qemu
         uses: docker/setup-qemu-action@v2
       - name: setup-docker-buildx
@@ -42,8 +48,16 @@ jobs:
         run: gcloud config set project protean-aria-398100
       - name: Cloud Run Deploy
         run: |
-          gcloud run deploy inclugames \
-            --image=docker.io/inclunet/inclugames:latest \
-            --region=us-central1 \
-            --platform=managed \
-            --allow-unauthenticated
+          if [ "${{ github.ref_name }}" == "main" ]; then
+            gcloud run deploy inclugames \
+                    --image=docker.io/inclunet/inclugames:latest \
+                    --region=us-central1 \
+                    --platform=managed \
+                    --allow-unauthenticated
+          else
+            gcloud run deploy inclugames-staging \
+                    --image=docker.io/inclunet/inclugames:beta \
+                    --region=us-central1 \
+                    --platform=managed \
+                    --allow-unauthenticated
+          fi
